{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "b2013991-d364-4781-91f7-466112226adb",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "613657c4-5137-4a9b-8776-01b259ddb2bf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "8410fc6f-f45c-4917-8d3e-c75780962b4f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7d60d34c-ecca-441d-9b60-38b06dfecbbc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "829c3356-e904-4cf7-b080-bf5922829874",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8b9a2ebf-034b-4553-b3ba-d4e9e872cf35",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d72afc7f-36c9-4b91-a519-1412a6c26aef",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "a393f31d-1797-4986-963b-3c2a30da6a56",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "cb525dcc-c9a9-4bc4-832c-f124ec270724",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "48cd8cce-22ba-4487-a659-b7ca9a9e4f7d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}